# calculation

./: .gitignore  README.md  __init__.py  increment_version.py  pip_deploy.py  pyproject.toml  requirements.txt  setup.py  util.py
.github/workflows/: ci.yml
calculation/: __init__.py  area.py  distance.py  exif_calc_heading.py  exif_extract.py  img_transformer.py  intersection.py  iterator.py  pixel.py  units.py  util.py  utilities.py
docs/: changelog_001.rst
tests/: test_area.py  test_distance.py
