[tool.poetry]
name = "calculation"
version = "0.1.29"
description = ""
authors = ["mcv_ <murat@visiosoft.com.tr>"]

[tool.poetry.dependencies]
python = "^3.8"
addict = "^2.4.0"
trianglesolver = "^1.2"
ExifRead = "^3.0.0"
requests = "^2.28.1"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
